Day 2 & 3: Worked on navbar, layout styling, and responsiveness

--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,16 +1,33 @@
-@import '../../responsive.scss';
+@use '../../responsive.scss' as r;
+
 
 nav{
     display: flex;
     justify-content: space-between;
     height:100px;
     align-items: center;
+    overflow-x: hidden;
 
     a{
-        @include sm{
-            display: none;
+        transition: all 0.4s ease;
+
+        &:hover{
+            scale: 1.05;
         }
     }
+
+    .left > a {
+       @include r.sm {
+          display: none;
+       }
+    }
+
+    .right > a {
+       @include r.sm {
+          display: none;
+       }
+    }   
+
 
     .left{
         flex:3;
@@ -30,11 +47,11 @@ nav{
             }
 
             span{
-                @include md{
+                @include r.md{
                     display: none;
                 }
 
-                @include sm{
+                @include r.sm{
                     display: initial;
                 }
             }
@@ -74,7 +91,11 @@ nav{
         align-items: center;
         justify-content: flex-end;
 
-        @include md{
+        @include r.sm{
+            background-color: transparent;
+        }
+
+        @include r.md{
             background-color: transparent;
         }
 
@@ -82,10 +103,14 @@ nav{
             padding: 12px 24px;
             margin: 20px;
 
-            transition: all 0.3s ease;
-            &:hover{
-                scale: 1.05;
-            }
+            // transition: all 0.3s ease;
+            // &:hover{
+            //     scale: 1.05;
+            // }
+
+            // @include r.sm{
+            //   display: none;
+            // }
         }
 
         .signUp{
@@ -100,8 +125,9 @@ nav{
                 cursor:pointer;
             }
 
-            @include sm{
+            @include r.sm{
                 display: inline;
+                z-index: 99;
             }
         }
 
@@ -113,9 +139,23 @@ nav{
             color: white;
             height:100vh;
             width:50%;
+            transition: all 0.5s ease;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            a{
+              transition: all 0.4s ease;
+
+              &:hover{
+                scale: 1.05;
+              }
+            }
         }
-
-        
-
+           
+        .active{
+            right:0;
+        }
     }
 }
