--- a/src/pages/listpage/ListPage.scss
+++ b/src/pages/listpage/ListPage.scss
@@ -13,11 +13,13 @@
             flex-direction: column;
             gap: 50px;
             overflow-x: scroll;
+            padding-bottom: 10px;
         }
     }
 
     .mapContainer{
         flex: 2;
+        height: 100%;
         background-color: #fcf5f3;
     }
 }
