--- a/src/pages/singlepage/SinglePage.scss
+++ b/src/pages/singlepage/SinglePage.scss
@@ -8,6 +8,8 @@
             padding-right: 50px;
 
             .info{
+                margin-top: 50px;
+                
                 .top{
                     display: flex;
                     justify-content: space-between;
@@ -62,7 +64,9 @@
                 }
 
                 .bottom{
-
+                   margin-top: 50px;
+                   color: #555;
+                   line-height: 20px;
                 }
             }
         }
