--- a/src/components/slider/Slider.scss
+++ b/src/components/slider/Slider.scss
@@ -1,3 +1,5 @@
+@use '../../responsive.scss' as r;
+
 .slider{
     width: 100%;
     height: 350px;
@@ -14,6 +16,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      z-index:9999;
 
         .arrow{
             flex: 1;
@@ -23,6 +26,13 @@
          
             img{
                 width: 50px;
+
+                @include r.md{
+                    width: 30px
+                }
+                @include r.sm{
+                    width: 20px
+                }
 
                 &.rightarr{
                    transform: rotate(180deg);
