--- a/src/pages/singlepage/SinglePage.scss
+++ b/src/pages/singlepage/SinglePage.scss
@@ -1,11 +1,35 @@
+@use '../../responsive.scss' as r;
+
 .singlepage{
     display:flex;
+    height: 100%;
+    overflow-x: hidden;
 
-    .left{
+    @include r.md{
+        flex-direction: column;
+        overflow: scroll;
+    }
+
+    .details{
         flex: 3;
+        height: 100%;
+        overflow-y: scroll;
+
+        @include r.md{
+            flex: none;
+            height: max-content;
+            margin-bottom: 50px;
+        }
 
         .wrapper{
             padding-right: 50px;
+
+            @include r.lg {
+                padding-right: 20px;
+            }
+            @include r.md {
+                padding-right: 0px;
+            }
 
             .info{
                 margin-top: 50px;
@@ -13,6 +37,11 @@
                 .top{
                     display: flex;
                     justify-content: space-between;
+
+                    @include r.sm {
+                        flex-direction: column;
+                        gap: 20px;
+                    }
 
                     .postInfo{
                         display: flex;
@@ -60,6 +89,10 @@
                             border-radius: 50%;
                             object-fit: cover;
                         }
+
+                        @include r.sm {
+                            padding: 20px 50px;
+                        }
                     }
                 }
 
@@ -72,12 +105,171 @@
         }
     }
 
-    .right{
+    .features{
         flex: 2;
         background-color: #fcf5f3;
+        height: 100%;
+        overflow-y: scroll;
+
+        @include r.md{
+            flex: none;
+            height: max-content;
+            margin-bottom: 50px;
+        }
 
         .wrapper{
             padding: 0px 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            @include r.md {
+                padding: 20px;
+            }
+
+            img{
+                width: 24px;
+                height: 24px;
+            }
+
+            .title{
+                font-weight: bold;
+                font-size:18px;
+                margin-bottom: 10px;
+            }
+
+            .feature{
+                display: flex;
+                align-items: center;
+                gap: 10px;
+
+                img{
+                    background-color: rgba(254, 205, 81, 0.209);
+                }
+
+                .featureText{
+                    span{
+                        font-weight: bold;
+                    }
+                    p{
+                        font-size: 14px;
+                    }
+                }
+            }
+
+            .listVertical{
+                display: flex;
+                flex-direction: column;
+                gap: 20px;
+                padding: 20px 10px;
+                background-color: white;
+                border-radius: 10px;
+            }
+
+            .sizes{
+                display: flex;
+                justify-content: space-between;
+
+                @include r.lg{
+                    font-size: 12px;
+                }
+
+                @include r.sm{
+                   gap: 10px;
+                    background-color: white;
+                    padding: 10px;
+                    border-radius: 5px; 
+                }
+
+                .size {
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+                    background-color: white;
+                    padding: 10px;
+                    border-radius: 5px;
+                }
+    
+            }
+
+            .listhorizontal{
+                display: flex;
+                justify-content: space-between;
+                padding: 20px 10px;
+                background-color: white;
+                border-radius: 10px;
+
+                @include r.sm{
+                    gap:5px;
+                }
+
+                .feature{
+                    display: flex;
+                    align-items: center;
+                    gap: 10px;
+
+                    img{
+                        background-color: rgba(254, 205, 81, 0.209);
+
+                        @include r.sm{
+                            width: 18px;
+                            height: 18px;
+                        }
+                    }
+
+                    .featureText{
+                        span{
+                            font-weight: bold;
+
+                            @include r.sm{
+                                font-weight: 400;
+                                font-size: 15px;
+                            }
+                        }
+                        p{
+                            font-size: 14px;
+
+                            @include r.sm{
+                                font-size: 12px;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .mapCont{
+                width: 100%;
+                height: 200px;
+            }
+
+            .buttons{
+                display: flex;
+                justify-content: space-between;
+
+                @include r.md {
+                    gap: 8px;
+                }
+
+                button{
+                    padding: 20px;
+                    display: flex;
+                    align-items: center;
+                    gap: 5px;
+                    background-color: white;
+                    border: 1px solid #fece51;
+                    border-radius: 5px;
+                    cursor: pointer;
+
+                    @include r.sm{
+                        padding: 10px;
+                    }
+
+                    img{
+                        width: 16px;
+                        height: 16px;
+                    }
+                }
+            }
         }
     }
 }
